index merging fix